--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -37,13 +37,12 @@ outputs:
       run:
         - python
         - alembic >=1.5.1,<2.0
-        - argcomplete >=1.10,<3.0
+        - argcomplete >=1.10
         - attrs >=20.0,<21.0
         - blinker
-        - cached-property >=1.5,<2.0  # [py<=37]
+        - cached-property >=1.5  # [py<=37]
         - cattrs >=1.1,<2,!=1.7.*
-        - clickclick >=1.2
-        - colorlog >=4.0.2,<7.0
+        - colorlog >=4.0.2,<5.0
         - connexion >=2.10.0
 
         # connection[swagger-ui] dependencies
@@ -52,11 +51,11 @@ outputs:
         - flask >=1.0.4,<3
         - itsdangerous >=0.24
 
+        - cron-descriptor >=1.2.24
         - croniter >=0.3.17
         - cryptography >=0.9.3
         - deprecated >=1.2.13
-        - dill >=0.2.2,<0.4
-        - docutils <0.17
+        - dill >=0.2.2
         - flask >=1.1.0,<2.0
         - flask-appbuilder 3.4.5
         - flask-caching >=1.5.0,<2.0.0
@@ -67,37 +66,36 @@ outputs:
         - gunicorn >=19.5.0
         - httpx
         - importlib_metadata >=1.7  # [py<39]
-        - importlib_resources >=5.2,<6.0  # [py<39]
-        - iso8601 >=0.1.12
+        - importlib_resources >=5.2  # [py<39]
         - itsdangerous >=1.1.0,<2.0
         - jinja2 >=2.10.1,<3.1
-        - jsonschema >=3.0,<4.0
+        - jsonschema >=3.2.0,<5.0
         - lazy-object-proxy
         - lockfile >=0.12.2
-        - markdown >=2.5.2,<4.0
+        - markdown>=3.0
         - markupsafe >=1.1.1,<2.1.0
         - marshmallow-oneofschema >=2.0.1
         - packaging >=14.0
-        - pendulum >=2.0,<3.0
-        - psutil >=4.2.0,<6.0.0
-        - pygments >=2.0.1,<3.0
+        - pathspec >=0.9.0,<1.0
+        - pendulum >=2.0
+        - pluggy>=1.0
+        - psutil >=4.2.0
+        - pygments >=2.0.1
         - pyjwt <3
         - python-daemon >=2.2.4
-        - python-dateutil >=2.3,<3
-        - python-nvd3 >=0.15.0,<0.16.0
-        - python-slugify >=3.0.0,<5.0
-        - python3-openid >=3.2,<4.0
-        - rich >=9.2.0
-        - setproctitle >=1.1.8,<2
-        - sqlalchemy >=1.3.18,<1.4.0
-        - sqlalchemy-jsonfield >=1.0,<2.0
-        - tabulate >=0.7.5,<0.9
+        - python-dateutil >=2.3
+        - python-nvd3 >=0.15.0
+        - python-slugify >=5.0
+        - rich >=12.3.0
+        - setproctitle >=1.1.8
+        - sqlalchemy >=1.4,<1.4.10
+        - sqlalchemy-jsonfield >=1.0
+        - tabulate >=0.7.5
         - tenacity >=6.2.0
         - termcolor >=1.1.0
         - typing-extensions >=3.7.4
         - unicodecsv >=0.14.1
         - werkzeug >=1.0.1,<2.0
-        - wtforms <3.0.0
         - apache-airflow-providers-ftp
         - apache-airflow-providers-http
         - apache-airflow-providers-imap
