--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "airflow" %}
-{% set version = "2.3.4" %}
-{% set sha256 = "b05b73af2376b03f7346e5a37ac810ff108c219e6e547227521889a12bf628eb" %}
+{% set version = "2.4.0" %}
+{% set sha256 = "9383b94d2334ce0267adeeee47d3f9b67cb2c3a0bc821580d091ed284a9d2e5c" %}
 
 package:
   name: {{ name|lower }}-split
@@ -13,7 +13,7 @@ source:
 
 build:
   skip: true  # [win]
-  number: 1
+  number: 0
 
 outputs:
   - name: {{ name }}
@@ -36,11 +36,13 @@ outputs:
       run:
         - python
         - alembic >=1.5.1,<2.0
+        - attrs >=22.1.0
         - argcomplete >=1.10
         - blinker
         - cached-property >=1.5  # [py<=37]
         - cattrs >=22.1.0
         - colorlog >=4.0.2,<5.0
+        - configupdater >=3.1.1
         - connexion >=2.10.0
 
         # connexion[swagger-ui] dependencies
@@ -54,7 +56,7 @@ outputs:
         - cryptography >=0.9.3
         - deprecated >=1.2.13
         - dill >=0.2.2
-        - flask >=2.0,<2.3
+        - flask >=2.2,<2.3
         - flask-appbuilder 4.1.3
         - flask-caching >=1.5.0
         - flask-login >=0.6.2
@@ -147,7 +149,6 @@ outputs:
         - airflow.security
         - airflow.sensors
         - airflow.serialization
-        - airflow.smart_sensor_dags
         - airflow.task
         - airflow.task.task_runner
         - airflow.ti_deps
@@ -201,7 +202,13 @@ outputs:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - python-hdfs >=2.0.4
-        - apache-airflow-providers-apache-hdfs
+        # avro extra
+        - fastavro >=0.21.19
+        # kerberos extra
+        - requests-kerberos >=0.7.0
+        # dataframe extra
+        - fastavro >=0.21.19
+        - pandas>=0.14.1
     test:
       imports:
         - airflow
@@ -373,10 +380,6 @@ outputs:
         - pykerberos >=1.1.13
         - requests-kerberos >=0.10.0
         - thrift_sasl >=0.2.0
-        # temporary dependencies because of bad build of thrift_sasl
-        - thrift >=0.13
-        - pure-sasl >=0.6.2
-        - six >=1.13.0
     test:
       imports:
         - airflow
