--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,8 +30,8 @@ outputs:
         - docutils
         - gitpython
         - yarn
-        # seems to be having trouble with openssl 3.
-        # By including it as a dependency, we can explicitly check
+        # explicit dependence on openssl isn't mentioned but version incompatibility 
+        # has given us trouble in the past
         - openssl
       run:
         - python
@@ -103,8 +103,8 @@ outputs:
         - apache-airflow-providers-http
         - apache-airflow-providers-imap
         - apache-airflow-providers-sqlite
-        # seems to be having trouble with openssl 3.
-        # By including it as a dependency, we can explicitly check
+        # explicit dependence on openssl isn't mentioned but version incompatibility 
+        # has given us trouble in the past
         - openssl
 
     test:
