--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,7 +13,7 @@ source:
 
 build:
   skip: true  # [win]
-  number: 0
+  number: 1
 
 outputs:
   - name: {{ name }}
@@ -22,6 +22,9 @@ outputs:
       entry_points:
         - airflow=airflow.__main__:main
     requirements:
+      build:
+        - python                                 # [build_platform != target_platform]
+        - cross-python_{{ target_platform }}     # [build_platform != target_platform]
       host:
         - python
         - pip
@@ -387,6 +390,8 @@ outputs:
         - pip
 
   - name: {{ name }}-with-ldap
+    build:
+      skip: true  # [osx-arm64 or linux-aarch64 or linux-ppc64le]
     requirements:
       host:
         - python
