Remove airflow-with-ldap
This should allow bot architecture migration

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,7 +13,7 @@ source:
 
 build:
   skip: true  # [win]
-  number: 0
+  number: 1
 
 outputs:
   - name: {{ name }}
@@ -386,23 +386,23 @@ outputs:
       requires:
         - pip
 
-  - name: {{ name }}-with-ldap
-    requirements:
-      host:
-        - python
-      run:
-        - python
-        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
-        - ldap3 >=2.5.1
-        - python-ldap
-    test:
-      imports:
-        - airflow
-        - ldap3
-      commands:
-        - pip check
-      requires:
-        - pip
+#  - name: {{ name }}-with-ldap
+#    requirements:
+#      host:
+#        - python
+#      run:
+#        - python
+#        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
+#        - ldap3 >=2.5.1
+#        - python-ldap
+#    test:
+#      imports:
+#        - airflow
+#        - ldap3
+#      commands:
+#        - pip check
+#      requires:
+#        - pip
 
   - name: {{ name }}-with-leveldb
     requirements:
