--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -29,7 +29,7 @@ outputs:
         - coreutils
         - docutils
         - gitpython
-        - yarn
+        - yarn <2
         # explicit dependence on openssl isn't mentioned but version incompatibility
         # has given us trouble in the past
         - openssl
