--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,3 +1,6 @@
+build_platform:
+  linux_aarch64: linux_64
+test_on_native_only: true
 conda_forge_output_validation: true
 github:
   branch_name: main
