--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -79,7 +79,7 @@ outputs:
         - marshmallow-oneofschema >=2.0.1
         - mdit-py-plugins >=0.3.0
         - packaging >=14.0
-        - pathspec >=0.9.0,<0.10.dev0
+        - pathspec >=0.9.0,<0.11.0
         - pendulum >=2.0
         - pluggy >=1.0
         - psutil >=4.2.0
