--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -225,6 +225,8 @@ outputs:
         - pip
 
   - name: {{ name }}-with-async
+    build:
+      skip: true  # [py>=312]
     requirements:
       host:
         - python
