--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,7 +13,7 @@ source:
 
 build:
   skip: true  # [win]
-  number: 0
+  number: 1
 
 outputs:
   - name: {{ name }}
@@ -64,7 +64,9 @@ outputs:
         - google-re2 >=1.0
         - python-graphviz >=0.12
         - gunicorn >=20.1.0
-        - httpx
+        # add a constraint to not pick up old httpx without HTTPTransport
+        # https://github.com/conda-forge/airflow-feedstock/issues/121
+        - httpx >=0.17.0
         - importlib-metadata >=1.7  # [py<39]
         - importlib-resources >=5.2  # [py<39]
         - itsdangerous >=2.0
